--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 #container {
+  font-family: "Noto Sans JP", sans-serif;
   width: 400px;
   margin: 40px auto 0;
   padding: 50px;
@@ -17,9 +18,10 @@ body {
 }
 
 h1 {
+  font-family: "Nanum Pen Script", cursive;
   margin: 0 0 20px;
   padding: 0 0 20px;
-  border-bottom: solid 1px #ddd;
+  /* border-bottom: solid 1px #ddd; */
 }
 
 form {
